// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/rhsChannelBoardItem render board 1`] = `
<div>
  <div
    class="RHSChannelBoardItem"
  >
    <div
      class="board-info"
    >
      
      <span
        class="title"
      >
        Test board
      </span>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="description"
    />
    <div
      class="date"
    >
      Last update at: July 08, 8:10 PM
    </div>
  </div>
</div>
`;

exports[`components/rhsChannelBoardItem render board with menu open 1`] = `
<div>
  <div
    class="RHSChannelBoardItem"
  >
    <div
      class="board-info"
    >
      <span
        class="icon"
      >
        i
      </span>
      <span
        class="title"
      >
        New board
      </span>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="description"
    >
      <p>
        <strong>
          Board
        </strong>
         with description
      </p>
    </div>
    <div
      class="date"
    >
      Last update at: July 08, 8:10 PM
    </div>
  </div>
</div>
`;
